# mcp-http-bridge

./: .gitignore  COPILOT.md  Dockerfile  IMPLEMENTATION.md  README.md  config.json  deploy.sh  docker-compose.yml  example.py  nginx.conf  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/mcp_http_bridge/: __init__.py  main.py  models.py  server.py
src/mcp_wrapper/: __init__.py  config.py  main.py  models.py  process_manager.py  protocol_bridge.py  server.py
tests/: test_config.py  test_integration.py  test_main.py  test_main_fixed.py  test_main_inline.py  test_models.py  test_process_manager.py  test_server.py
