[project]
name = "mcp-http-bridge"
version = "0.1.0"
description = "Bridge for stdio-only MCP tools that exposes their stdio protocol via streamable-http"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_http_bridge"]

[project.scripts]
mcp-http-bridge = "mcp_http_bridge.main:main"
